# rust-bcli

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: commands.rs  config.rs  constants.rs  display.rs  main.rs  parse.rs  rpc.rs  utils.rs
tests/: main.rs
