[package]
name = "bcli-rust"
version = "0.1.0"
authors = ["Edil Medeiros <jose.edil@gmail.com>, Ioannis Tornazakis <itornaza@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/edilmedeiros/rust-bcli"
description = "An opiniated alternative to bitcoin-cli."
categories = []
keywords = ["bitcoin", "cli", "rpc"]
readme = "README.md"
edition = "2021"
rust-version = "1.56"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
bitcoincore-rpc = "0.18.0"
confy = "0.5.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"

[[bin]]
name = "bitcoin"
path = "src/main.rs"
